--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
   <h2>Contact Us</h2>
   <div class="card">
     📞 WhatsApp: <a href="https://wa.me/60123456789">+60 12-345 6789</a><br />
-    📧 Email: aircondgo@gmail.com<br />
-    📍 Service Areas: Shah Alam, Subang, PJ, KL, Penang (more coming soon)
+    📧 Email: aircondgo01@gmail.com<br />
+    📍 Service Areas: Penang (more coming soon)
   </div>
 </section>
 
