--- a/index.html
+++ b/index.html
@@ -2,147 +2,186 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AircondGO | On-Demand Aircond Service & Repair</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AircondGO | Fast On-Demand Aircond Service</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      line-height: 1.6;
+      background-color: #f4f4f4;
       color: #333;
     }
+
     header {
-      background: #00bcd4;
+      background-image: url('https://images.unsplash.com/photo-1604147495793-7f3f35d46882?auto=format&fit=crop&w=1470&q=80');
+      background-size: cover;
+      background-position: center;
+      height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       color: white;
-      padding: 30px 20px;
       text-align: center;
+      padding: 20px;
     }
+
+    header h1 {
+      font-size: 3rem;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+    }
+
     nav {
-      background: #0097a7;
-      text-align: center;
-      padding: 10px;
+      background-color: #0097a7;
+      display: flex;
+      justify-content: center;
     }
+
     nav a {
       color: white;
-      margin: 0 15px;
+      padding: 15px 20px;
+      display: inline-block;
       text-decoration: none;
       font-weight: bold;
     }
+
+    nav a:hover {
+      background-color: #007c91;
+    }
+
     section {
       padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
-      background: white;
     }
+
     h2 {
-      color: #00bcd4;
+      color: #0097a7;
+      margin-bottom: 20px;
     }
+
+    .steps, .services, .technician {
+      display: grid;
+      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+
     .card {
-      background: #e0f7fa;
+      background: white;
       padding: 20px;
-      margin: 20px 0;
-      border-left: 5px solid #00acc1;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
+
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 5px;
+      margin-bottom: 10px;
+    }
+
     footer {
-      background: #004d40;
-      color: white;
       text-align: center;
-      padding: 15px;
-    }
-    .button {
-      background: #00bcd4;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 10px;
-      border-radius: 4px;
-    }
-    .button:hover {
+      padding: 20px;
       background: #0097a7;
+      color: white;
+      margin-top: 40px;
+    }
+
+    @media screen and (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>AircondGO</h1>
-  <p>Fast. Reliable. On-Demand Aircond Service & Repair.</p>
-</header>
+  <header>
+    <h1>AircondGO</h1>
+  </header>
 
-<nav>
-  <a href="#how">How It Works</a>
-  <a href="#services">Services</a>
-  <a href="#technician">For Technicians</a>
-  <a href="#contact">Contact</a>
-</nav>
+  <nav>
+    <a href="#how">How It Works</a>
+    <a href="#services">Services</a>
+    <a href="#technicians">Technicians</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-<section id="how">
-  <h2>How It Works</h2>
-  <div class="card">
-    <strong>1. Choose Your Aircond Type & Problem</strong><br />
-    Split Unit? Cassette? Leaking? Not Cold? Just select from the menu.
-  </div>
-  <div class="card">
-    <strong>2. Make Instant FPX Payment</strong><br />
-    Pay instantly with FPX. Your job is created immediately.
-  </div>
-  <div class="card">
-    <strong>3. System Finds Nearby Technician</strong><br />
-    We'll search for available technicians near your area within 30 minutes.
-  </div>
-  <div class="card">
-    <strong>4. No Technician? Auto Refund.</strong><br />
-    If no technician accepts in 30 mins, your payment is returned to your wallet.
-  </div>
-</section>
+  <section id="how">
+    <h2>How It Works</h2>
+    <div class="steps">
+      <div class="card">
+        <h3>1. Choose Your Aircond & Problem</h3>
+        <p>Split unit? Cassette? Leaking? Just select from the menu.</p>
+      </div>
+      <div class="card">
+        <h3>2. Pay Instantly (FPX)</h3>
+        <p>Your job is created immediately after secure payment.</p>
+      </div>
+      <div class="card">
+        <h3>3. Nearby Technician Accepts</h3>
+        <p>We’ll find a technician near you within 30 minutes.</p>
+      </div>
+      <div class="card">
+        <h3>4. No Technician? Auto Refund</h3>
+        <p>If no one accepts within 30 minutes, refund goes to e-wallet.</p>
+      </div>
+    </div>
+  </section>
 
-<section id="services">
-  <h2>Our Services (Sample Pricing)</h2>
-  <div class="card">
-    <strong>Basic Aircond Cleaning</strong><br />
-    RM60 per unit (wall-mounted split unit)
-  </div>
-  <div class="card">
-    <strong>Chemical Cleaning</strong><br />
-    RM150 per unit
-  </div>
-  <div class="card">
-    <strong>Gas Top-up</strong><br />
-    From RM80 (R22) / RM120 (R410A)
-  </div>
-  <div class="card">
-    <strong>Aircond Not Cold / Leaking?</strong><br />
-    Technician On-Site Diagnosis: RM50 (offset if repair done)
-  </div>
-</section>
+  <section id="services">
+    <h2>Our Services</h2>
+    <div class="services">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1629904853893-dbb546120225?auto=format&fit=crop&w=1470&q=80" alt="Wall Unit">
+        <h3>Wall Unit Service</h3>
+        <p>Cleaning, inspection & troubleshooting for standard wall units.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1601297136070-a1030ac52c5d?auto=format&fit=crop&w=1470&q=80" alt="Cassette">
+        <h3>Cassette Unit</h3>
+        <p>Service & gas refill for cassette-type airconds in offices & shops.</p>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1613467663099-1e98b24e35f6?auto=format&fit=crop&w=1470&q=80" alt="Ceiling">
+        <h3>Ceiling Ducted</h3>
+        <p>Professional repair & cleaning for ceiling ducted aircond units.</p>
+      </div>
+    </div>
+  </section>
 
-<section id="technician">
-  <h2>Are You An Aircond Technician?</h2>
-  <div class="card">
-    Join AircondGO and receive real-time job offers in your area.
-    <br />
-    ✅ Flexible Time<br />
-    ✅ Weekly Payout<br />
-    ✅ Work Near You
-    <br /><br />
-    <a class="button" href="#">Join as Technician</a>
-  </div>
-</section>
+  <section id="technicians">
+    <h2>For Technicians</h2>
+    <div class="technician">
+      <div class="card">
+        <h3>✅ Flexible Time</h3>
+        <h3>✅ Weekly Payout</h3>
+        <h3>✅ Work Near You</h3>
+        <br>
+        <a href="#">Join Us As Technician</a>
+      </div>
+    </div>
+  </section>
 
-<section id="contact">
-  <h2>Contact Us</h2>
-  <div class="card">
-    📞 WhatsApp: <a href="https://wa.me/60123456789">+60 12-345 6789</a><br />
-    📧 Email: aircondgo01@gmail.com<br />
-    📍 Service Areas: Penang (more coming soon)
-  </div>
-</section>
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <div class="card">
+      <p>📞 WhatsApp: <a href="https://wa.me/60178991122">+60 12 4185142</a></p>
+      <p>📧 Email: aircondgo01@gmail.com</p>
+      <p>📍 Service Areas: Penang (more coming soon)</p>
+    </div>
+  </section>
 
-<footer>
-  &copy; 2025 AircondGO. All rights reserved.
-</footer>
+  <footer>
+    &copy; 2025 AircondGO. All rights reserved.
+  </footer>
 
 </body>
 </html>
