--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/FxzK8Nf/aircondgo-logo.png" alt="AircondGO Logo" />
+  <img src="https://i.imgur.com/SrK5HyN.png" alt="AircondGO Logo" />
   <h1>AircondGO</h1>
   <p>Fast. Reliable. On-Demand Aircond Service & Repair.</p>
 </header>
