--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <h2>Our Services</h2>
   <div class="card-container">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1596075780750-81249df16d9a" alt="Wall Unit">
+     <img src="https://i.imgur.com/wvA8gJk.jpg" alt="Wall Unit">
       <h3>Wall Unit Service</h3>
       <p>Cleaning, inspection & troubleshooting for standard wall units.</p>
     </div>
