--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
   <h2>Our Services</h2>
   <div class="card-container">
     <div class="card">
-     <img src="https://i.imgur.com/wvA8gJk.jpg" alt="Wall Unit">
+      <img src="https://i.imgur.com/wvA8gJk.jpg" alt="Wall Unit">
       <h3>Wall Unit Service</h3>
       <p>Cleaning, inspection & troubleshooting for standard wall units.</p>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1622328420318-b8ab0b4cda29" alt="Cassette Unit">
+      <img src="https://i.imgur.com/K2nMG9S.jpg" alt="Cassette Unit">
       <h3>Cassette Unit</h3>
       <p>Service & gas refill for cassette-type airconds in offices & shops.</p>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1583855280900-9e98ee44dd4a" alt="Ceiling Ducted">
+      <img src="https://i.imgur.com/Z4xYTS7.jpg" alt="Ceiling Ducted">
       <h3>Ceiling Ducted</h3>
       <p>Professional cleaning for ceiling ducted aircond units.</p>
     </div>
@@ -162,7 +162,7 @@
 
 <section id="contact" class="contact">
   <h2>Contact Us</h2>
-  <p>📱 WhatsApp: <a href="https://wa.me/60123456789" style="color:#b084ff;">+6012-4185142</a></p>
+  <p>📱 WhatsApp: <a href="https://wa.me/60123456789" style="color:#b084ff;">+6012-418 5142</a></p>
   <p>📧 Email: aircondgo01@gmail.com</p>
   <p>📍 Service Areas: Penang (more coming soon)</p>
 </section>
