--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
 
 <header>
-  <img src="https://i.imgur.com/SrK5HyN.png" alt="AircondGO Logo" />
+  <img src="https://i.ibb.co/L1zcvYd/aircondgo-logo-white.png" alt="AircondGO Logo">
   <h1>AircondGO</h1>
   <p>Fast. Reliable. On-Demand Aircond Service & Repair.</p>
 </header>
@@ -133,17 +133,17 @@
   <h2>Our Services</h2>
   <div class="card-container">
     <div class="card">
-      <img src="https://i.imgur.com/wvA8gJk.jpg" alt="Wall Unit">
+      <img src="https://cdn.pixabay.com/photo/2020/06/21/07/35/air-conditioner-5323735_1280.jpg" alt="Wall Unit">
       <h3>Wall Unit Service</h3>
       <p>Cleaning, inspection & troubleshooting for standard wall units.</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/K2nMG9S.jpg" alt="Cassette Unit">
+      <img src="https://cdn.pixabay.com/photo/2022/06/23/07/23/ceiling-aircon-7279493_1280.jpg" alt="Cassette Unit">
       <h3>Cassette Unit</h3>
       <p>Service & gas refill for cassette-type airconds in offices & shops.</p>
     </div>
     <div class="card">
-      <img src="https://i.imgur.com/Z4xYTS7.jpg" alt="Ceiling Ducted">
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/09/32/air-1869670_1280.jpg" alt="Ceiling Ducted">
       <h3>Ceiling Ducted</h3>
       <p>Professional cleaning for ceiling ducted aircond units.</p>
     </div>
