--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     }
     .card img {
       width: 100%;
+      height: 180px;
+      object-fit: cover;
       border-radius: 10px;
       margin-bottom: 15px;
     }
@@ -106,7 +108,7 @@
 <body>
 
 <header>
-  <img src="https://i.ibb.co/L1zcvYd/aircondgo-logo-white.png" alt="AircondGO Logo">
+  <img src="https://i.ibb.co/L1zcvYd/aircondgo-logo-white.png" alt="AircondGO Logo" />
   <h1>AircondGO</h1>
   <p>Fast. Reliable. On-Demand Aircond Service & Repair.</p>
 </header>
